--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
@@ -20,6 +21,7 @@
         <a href="">Blogs</a>
     </nav>
 </header>
+<a href="https://www.flaticon.com/fr/icones-gratuites/la-navigation" title="la navigation icônes"></a>
 <main>
     <div class="un">
        <div class="logo"> 
@@ -36,6 +38,7 @@
     </div>
 
     <div class="deux">
+      <div class="fils">
         <div class="text3">
             <img src="mach1.jpg" alt="">
         </div>
@@ -43,6 +46,8 @@
             <h2 class="flux">Programmation</h2>
             <p>Augue tellus in at odio velit diam. Fringilla sagittis facilisi ur</p>
         </div>
+      </div>
+      <div class="fille">
         <div class="text3">
             <img src="mach3.jpg" alt="">
         </div>
@@ -50,6 +55,8 @@
             <h2 class="flax"> Design</h2>
             <p>Augue tellus in at odio velit diam. Fringilla sagittis facilisi ur</p>
         </div>
+      </div>
+      <div class="jumo">
         <div class="text3">
             <img src="mach2.jpg" alt="">
         </div>
@@ -57,15 +64,20 @@
             <h2 class="flex">Marketing degital</h2>
             <p>Augue tellus in at odio velit diam. Fringilla sagittis facilisi ur</p>
         </div>
+      </div>
     </div>
 
     <div class="trois">
+        <div class="bak">
         <h1>Bakeli</h1>
+        </div>
+        <div class="fil">
         <p class="prog">Programmation</p>
         <p class="deg"> Design graphique / UI UX design</p>
         <p class="mar">Marketing degital</p>
         <p class="ent">Entreprenariat</p>
-      </div>
+        </div>
+        </div>
       <div class="quar">
        <div class="one">
         <img class="yaw" src="taf1.jpg" alt="">
@@ -88,55 +100,68 @@
         <p>id amet aliquet emin ipsum</p>
       <div class="pro">
         <div class="pro1">
-            <p> Pratique <span>100%</span></p>
-            <progress value="100" max="100" class="avancer">100%</progress>
-
-            <p > Bakelistes insérès <span>80%</span></p>
-            <progress value="80" max="100" class="avancer"></progress>
+           <div class="bén"> <p> Pratique <span>100%</span></p>
+            <progress value="100" max="100" class="avancer">100%</progress></div>
+            <div class="niar"><p > Bakelistes insérès <span>80%</span></p>
+            <progress value="80" max="100" class="avancer"></progress></div>
         </div>
-        
         <div class="pro2">
-           <p>Opportunitès <span>90%</span></p>
-           <progress value="90" max="100" class="avancer">90%</progress>
-
-           <p>Reussite <span>70%</span></p>
-           <progress value="70" max="100" class="avancer"></progress>
+           <div class="niét"><p>Opportunitès <span>90%</span></p>
+           <progress value="90" max="100" class="avancer">90%</progress></div>
+           <div class="niént"><p>Reussite <span>70%</span></p>
+           <progress value="70" max="100" class="avancer"></progress></div>
         </div>
       </div>
     </div>
 
     <div class="six">
+      <div class="team">
        <h2> Notre Team </h2>
        <p>Viverra duis gravida nulla adipiscing velit sollicitudin condimentum . In facilisis </p>
                        <p>lacus id amet aliquet emin ipsum</p>
+                      </div>
        <div class="avatar">
-        
          <div class="jane"> 
-          <div class="ooper">
+          <div class="cooper">
             <img src="ava1.jpg" alt="" class="imagejc">
           </div>
+             <div class="cop">
             <h4>Jane <strong>Cooper</strong></h4>
+          </div>
          </div>
-
          <div class="jacob">
             <div class="jones">
               <img src="ava2.jpg" alt="" class="imagejj">
             </div>
+            <div class="nes">
             <h4>Jacob <strong>Jones</strong></h4>
+          </div>
         </div>
+        <div class="ale">
         <div class="leslie">
             <div class="alex">
               <img src="ava3.jpg" alt="" class="imagela">
             </div>
             <h4>Leslie <strong>Alexander</strong></h4>
         </div>
-
+      </div>
+          <!-- <div class="koo">
         <div class="brook">
             <div class="silm">
               <img src="ava4.jpg" alt="" class="imagebs">
             </div>
             <h4>Brooklyn <strong>Silmons</strong></h4>
         </div>
+      </div> -->
+      <div class="cadre-blanc">
+        <div class="image-avatar">
+          <img src="ava4.jpg" alt="">
+        </div>
+        <div class="khady">
+           <h4>Brooklyn <strong>Silmons</strong></h4>
+        </div>
+
+      </div>
        </div>
     </div>
 
